--- a/package/ramips/applications/wpa-supplicant-20/files/p2p_dhcpd.conf
+++ b/package/ramips/applications/wpa-supplicant-20/files/p2p_dhcpd.conf
@@ -1,6 +1,6 @@
 start 192.168.49.100
 end 192.168.49.200
-interface p2p-p2p0-0
+interface p2p9
 lease_file /var/p2p_dhcpd.leases
 option subnet 255.255.255.0
 option dns 168.95.1.1 8.8.8.8
