--- a/package/ramips/drivers/mt7615e/config.in
+++ b/package/ramips/drivers/mt7615e/config.in
@@ -1,48 +1,48 @@
 if PACKAGE_kmod-mt7615e
 
 config MT7615E_AP_SUPPORT
-    bool
-    default y
-    depends on PACKAGE_kmod-mt7615e
+	bool
+	default y
+	depends on PACKAGE_kmod-mt7615e
 
 config MT7615E_SUPPORT_OPENWRT
-    bool
-    default y
-    depends on PACKAGE_kmod-mt7615e
+	bool
+	default y
+	depends on PACKAGE_kmod-mt7615e
 
 config MT7615E_RT_FIRST_CARD
-    string
-    default 7615e
-    depends on PACKAGE_kmod-mt7615e
+	string
+	default 7615e
+	depends on PACKAGE_kmod-mt7615e
 
 config MT7615E_RT_SECOND_CARD
-    string
-    default 7615e
-    depends on PACKAGE_kmod-mt7615e
+	string
+	default 7615e
+	depends on PACKAGE_kmod-mt7615e
 
 config MT7615E_RT_FIRST_IF_RF_OFFSET
-    hex
-    default 0x0
+	hex
+	default 0x0
 
 config MT7615E_RT_SECOND_IF_RF_OFFSET
-    hex
-    default 0x8000 
+	hex
+	default 0x8000
 
 #if FIRST_IF_MT7603E || SECOND_IF_MT7603E
 config MT7615E_FIRST_IF_MT7615E
-    bool
-    default y
-    depends on PACKAGE_kmod-mt7615e
+	bool
+	default y
+	depends on PACKAGE_kmod-mt7615e
 
 config MT7615E_WIFI_DRIVER
-    bool
-    default y
-    depends on PACKAGE_kmod-mt7615e
-    select MT7615E_WIFI_MT_MAC
-    select MT7615E_MT_MAC
-    select MT7615E_CHIP_MT7615E
-    select MT7615E_FIRST_IF_MT7615E
-    select MT7615E_SECOND_IF_MT7615E
+	bool
+	default y
+	depends on PACKAGE_kmod-mt7615e
+	select MT7615E_WIFI_MT_MAC
+	select MT7615E_MT_MAC
+	select MT7615E_CHIP_MT7615E
+	select MT7615E_FIRST_IF_MT7615E
+	select MT7615E_SECOND_IF_MT7615E
 
 config MT7615E_MT_WIFI
 	tristate "MT WIFI Driver"
@@ -92,11 +92,11 @@ config MT7615E_RT_SECOND_CARD_EEPROM
 	default "prom" if MT7615E_SECOND_IF_EEPROM_PROM
 	default "efuse" if MT7615E_SECOND_IF_EEPROM_EFUSE
 	default "flash" if MT7615E_SECOND_IF_EEPROM_FLASH
-		
+
 config MT7615E_MULTI_INF_SUPPORT
 	bool
 	default y if !MT7615E_FIRST_IF_NONE && !MT7615E_SECOND_IF_NONE
-		
+
 config MT7615E_WIFI_BASIC_FUNC
 	bool "Basic Functions"
 	select MT7615E_WIRELESS_EXT
@@ -116,7 +116,7 @@ config MT7615E_DOT11_VHT_AC
 config MT7615E_G_BAND_256QAM_SUPPORT
 	bool "2.4G 256QAM support"
 	depends on MT7615E_WIFI_DRIVER
-    	depends on MT7615E_DOT11_VHT_AC
+		depends on MT7615E_DOT11_VHT_AC
 	default y
 
 config MT7615E_BRCM_256QAM_SUPPORT
@@ -135,40 +135,40 @@ config MT7615E_BACKGROUND_SCAN_SUPPORT
 	bool "Background Scan Support"
 	depends on MT7615E_WIFI_DRIVER
 	default y
-	
+
 config MT7615E_SMART_CARRIER_SENSE_SUPPORT
 	bool "Smart Carrier Sense Support"
 	depends on MT7615E_WIFI_DRIVER
 	default y
-	
+
 config MT7615E_MT_DFS_SUPPORT
-        bool "Dynamic Frequency Selection Support"	
-        depends on MT7615E_WIFI_DRIVER
-        default y
+	bool "Dynamic Frequency Selection Support"
+	depends on MT7615E_WIFI_DRIVER
+	default y
 
 #config WFA_VHT_R2_PF
-#    bool "WFA VHT R2 Plugfest"
-#    depends on DOT11_VHT_AC
-#    default n
+#	bool "WFA VHT R2 Plugfest"
+#	depends on DOT11_VHT_AC
+#	default n
 
 config MT7615E_HDR_TRANS_TX_SUPPORT
-    bool "Tx Header Translation"
-    depends on MT7615E_CHIP_MT7615E
-    default y
+	bool "Tx Header Translation"
+	depends on MT7615E_CHIP_MT7615E
+	default y
 
 config MT7615E_HDR_TRANS_RX_SUPPORT
-    bool "Rx Header Translation"
-    depends on MT7615E_CHIP_MT7615E
-    default y
+	bool "Rx Header Translation"
+	depends on MT7615E_CHIP_MT7615E
+	default y
 
 config MT7615E_DBDC_MODE
 	bool "dbdc mode support"
 	default y
 
 config MT7615E_SUPPORT_DYNAMIC_TXOP
-    	bool "dynamic txop support"
-	default n
-        
+	bool "dynamic txop support"
+	default y
+
 config MT7615E_WSC_INCLUDED
 	bool "WSC (WiFi Simple Config)"
 	depends on MT7615E_WIFI_DRIVER
@@ -188,9 +188,9 @@ config MT7615E_DOT11W_PMF_SUPPORT
 	default y
 
 config MT7615E_TXBF_SUPPORT
-        bool "Tx Bean Forming Support"
-        depends on MT7615E_WIFI_DRIVER
-        default n
+	bool "Tx Bean Forming Support"
+	depends on MT7615E_WIFI_DRIVER
+	default y
 
 #config LLTD_SUPPORT
 #	bool "LLTD (Link Layer Topology Discovery Protocol)"
@@ -279,10 +279,10 @@ config MT7615E_RTMP_FLASH_SUPPORT
 	default y
 
 config MT7615E_CAL_TO_FLASH_SUPPORT
-    bool "CalibrationToFlash Support"
-    depends on MT7615E_WIFI_DRIVER
-    depends on MT7615E_RTMP_FLASH_SUPPORT
-    default n
+	bool "CalibrationToFlash Support"
+	depends on MT7615E_WIFI_DRIVER
+	depends on MT7615E_RTMP_FLASH_SUPPORT
+	default n
 
 #config LED_CONTROL_SUPPORT
 #	bool "LED Support"
@@ -294,7 +294,7 @@ config MT7615E_ATE_SUPPORT
 	bool "ATE/QA Support"
 	depends on MT7615E_WIFI_DRIVER
 	depends on MT7615E_MT_AP_SUPPORT
-	default n	
+	default y
 
 #config MEMORY_OPTIMIZATION
 #	bool "Memory Optimization"
@@ -309,9 +309,9 @@ config MT7615E_ATE_SUPPORT
 #	default n
 
 #config TRACE_TCP_PKT
-#       bool "TCP DATA/ACK packets trace log"
-#       depends on WIFI_DRIVER
-#       default n
+#	   bool "TCP DATA/ACK packets trace log"
+#	   depends on WIFI_DRIVER
+#	   default n
 
 config MT7615E_UAPSD
 	bool "UAPSD support"
@@ -346,22 +346,22 @@ config MT7615E_RTMP_MAC
 	default n
 
 config MT7615E_RTMP_BBP
-    	bool
+	bool
 
 config MT7615E_RTMP_RF
-    	bool
+	bool
 
 #
 # Section for interfaces
 #
 config MT7615E_RTMP_PCI_SUPPORT
-    	bool
+	bool
 
 config MT7615E_RTMP_USB_SUPPORT
-		bool
+	bool
 
 config MT7615E_RTMP_RBUS_SUPPORT
-    	bool
+	bool
 
 endmenu
 
@@ -392,7 +392,7 @@ endchoice
 
 config MT7615E_MT_AP_SUPPORT
 	tristate "Ralink RT2860 802.11n AP support"
-#	depends on NET_RADIO 
+#	depends on NET_RADIO
 	select MT7615E_WIRELESS_EXT
 	select MT7615E_WEXT_SPY
 	select MT7615E_WEXT_PRIV
@@ -424,10 +424,10 @@ config MT7615E_APCLI_SUPPORT
 	default y
 
 config MT7615E_APCLI_CERT_SUPPORT
-        bool "AP-Client TGn Cert Support"
+	bool "AP-Client TGn Cert Support"
 	depends on MT7615E_MT_AP_SUPPORT
-        depends on MT7615E_APCLI_SUPPORT
-        default n
+	depends on MT7615E_APCLI_SUPPORT
+	default y
 
 config MT7615E_MAC_REPEATER_SUPPORT
 	bool "MAC Repeater Support"
@@ -461,7 +461,7 @@ config MT7615E_CON_WPS_SUPPORT
 	depends on MT7615E_WSC_INCLUDED
 	depends on MT7615E_WSC_V2_SUPPORT
 	default y
-	
+
 #config LLTD_SUPPORT
 #	bool "LLTD (Link Layer Topology Discovery Protocol)"
 #	depends on MT_AP_SUPPORT
@@ -500,12 +500,12 @@ config MT7615E_VOW_SUPPORT
 config MT7615E_BAND_STEERING
 	bool "Band Steering"
 	depends on MT7615E_MT_AP_SUPPORT
-	default n
+	default y
 
 config MT7615E_MUMIMO_SUPPORT
-        bool "MU-MIMO Support"
-        depends on MT7615E_MT_AP_SUPPORT
-        default y
+	bool "MU-MIMO Support"
+	depends on MT7615E_MT_AP_SUPPORT
+	default y
 
 config MT7615E_MU_RA_SUPPORT
   	bool "MU-RGA Support"
@@ -513,20 +513,20 @@ config MT7615E_MU_RA_SUPPORT
   	default y
 
 config MT7615E_TXOP_ARBITER
-        bool "TXOP_ARBITER Support"
-        depends on MT7615E_MT_AP_SUPPORT
-        default y
-        
+	bool "TXOP_ARBITER Support"
+	depends on MT7615E_MT_AP_SUPPORT
+	default y
+
 config MT7615E_CFG_SUPPORT_DYNAMIC_TXOP
-        bool "DYNAMIC_TXOP Support"
-        depends on MT7615E_TXOP_ARBITER
-        default y	
+	bool "DYNAMIC_TXOP Support"
+	depends on MT7615E_TXOP_ARBITER
+	default y
 
 config MT7615E_LED_CONTROL_SUPPORT
-        bool "LED Control Support"
-        default y
+	bool "LED Control Support"
+	default y
 
-endmenu	
+endmenu
 
 endif
 
@@ -566,7 +566,15 @@ if MT7615E_CHIP_MT7615E
 		select MT7615E_DOT11_VHT_AC
 		select MT7615E_HDR_TRANS_TX_SUPPORT
 		select MT7615E_HDR_TRANS_RX_SUPPORT
-endif	
+endif
+
+config MT7615E_RA_HW_NAT
+	bool
+	default y
+
+config MT7615E_RA_HW_NAT_WIFI_NEW_ARCH
+	bool
+	default y
 
 endif
 
