--- a/package/ramips/applications/eth_mac/Makefile
+++ b/package/ramips/applications/eth_mac/Makefile
@@ -1,12 +1,12 @@
 #
-# hua.shao@mediatek.com
+# Copyright (C) 2010-2013 hua.shao@mediatek.com
 #
 # MTK Property Software.
 #
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=btnd
+PKG_NAME:=eth_mac
 PKG_RELEASE:=1
 
 PKG_BUILD_DIR:=$(BUILD_DIR)/$(PKG_NAME)
@@ -17,15 +17,15 @@ PKG_CONFIG_DEPENDS:=$(foreach c, $(PKG_KCONFIG),$(if $(CONFIG_$c),CONFIG_$(c)))
 include $(INCLUDE_DIR)/package.mk
 include $(INCLUDE_DIR)/kernel.mk
 
-define Package/btnd
+define Package/eth_mac
   SECTION:=MTK Properties
   CATEGORY:=MTK Properties
-  TITLE:=Daemon to monitor gpio buttons
+  TITLE:=Command to config eth mac
   SUBMENU:=Applications
 endef
 
-define Package/btnd/description
-  Daemon to monitor gpio buttons
+define Package/eth_mac/description
+  An program to config eth mac.
 endef
 
 define Build/Prepare
@@ -34,19 +34,18 @@ define Build/Prepare
 endef
 
 TARGET_CFLAGS += \
-	-I$(LINUX_DIR)/arch/${ARCH}/include \
 	-I$(LINUX_DIR)/include \
-	-I$(LINUX_DIR)/drivers/char/ \
-	$(foreach c, $(PKG_KCONFIG),$(if $(CONFIG_$c),-DCONFIG_$(c)=$(CONFIG_$c)))
+	-I$(LINUX_DIR)/drivers/net/raeth \
+	$(foreach c, $(PKG_KCONFIG),$(if $(CONFIG_$c),-DCONFIG_$(c)))
 
+define Build/Configure
+endef
 
-define Package/btnd/install
+define Package/eth_mac/install
 	$(INSTALL_DIR) $(1)/usr/bin
-	$(INSTALL_DIR) $(1)/etc/btnd
-	$(INSTALL_BIN) $(PKG_BUILD_DIR)/btnd $(1)/usr/bin
-	-$(CP) ./files/*.sh  $(1)/etc/btnd/
+	$(INSTALL_BIN) $(PKG_BUILD_DIR)/eth_mac $(1)/usr/bin
 endef
 
 
-$(eval $(call BuildPackage,btnd))
+$(eval $(call BuildPackage,eth_mac))
 
